ajout notes de versions

--- a/index.html
+++ b/index.html
@@ -60,48 +60,35 @@ A travers les mutations légères et une fonction de mort pour éliminer les tra
 		Notes de versions
 		</h2>
 
-		<h3> v0.5.3 </h3>
-		<ul>
-			<li> </li>
-		</ul>
-
-		<h3> v0.5.2 </h3>
-		<ul>
-			<li> </li>
-		</ul>
-
-		<h3> v0.5.1 </h3>
-		<ul>
-			<li> </li>
-		</ul>
-
 
 		<h3> v0.5.0 </h3>
 		<ul>
-			<li> </li>
+			<li> Le cerveau des créatures est considérablement amélioré</li>
 		</ul>
 
 
 		<h3> v0.4.0 </h3>
 		<ul>
-			<li> Mises en place d'un réseau de neurones simple</li>
+			<li> Les créatures ont un cerveau basique grâce à un circuit neuronal</li>
+			<li> La génération de cartes passe à un algorithme de fractale à diamant-carré</li>
 		</ul>
 
 		<h3> v0.3.0 </h3>
 		<ul>
-			<li> </li>
+			<li> Les créatures ont des vitesses différentes et se reproduisent</li>
 		</ul>
 
 
 		<h3> v0.2.0 </h3>
 		<ul>
-			<li> Mort des créatures </li>
+			<li> Les créatures mangent et meurent lorsqu'elles ne trouvent pas assez de nourriture </li>
 		</ul>
 	
 		<h3> v0.1.0 </h3>
 		<ul>
-			<li> Génération de cartes fonctionnelle</li>
-			<li> Créatures bougeant aléatoirement </li>
+			<li>Affichage de la carte et des créatures</li>
+			<li>La carte est générée aléatoirement par matrice de bruit</li>
+			<li>Elles bougent aléatoirement à une vitesse constante</li>
 		</ul>
 	 <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
