ajout de la référence pour l'image

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@ A travers les mutations légères et une fonction de mort pour éliminer les tra
 			<li>Elles bougent aléatoirement à une vitesse constante</li>
 		</ul>
 	 <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+		<div><small> Darwin pixel art made by <a href="http://diegosanches.com/science-kombat"> Diego Sanches</a> </small></div>
+		<div><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></div>
       </footer>
       </section>
     </div>
