--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		<p>
 			<div><a href="#a-propos"> A propos </a></div>
 			<div><a href="#notes-de-versions"> Notes de versions </a></div>
+			<div><a href="#images"> Images </a></div>
 		</p>
 
 	
@@ -90,6 +91,20 @@ A travers les mutations légères et une fonction de mort pour éliminer les tra
 			<li>La carte est générée aléatoirement par matrice de bruit</li>
 			<li>Elles bougent aléatoirement à une vitesse constante</li>
 		</ul>
+
+
+
+		<h2>
+		<a id="images" class="anchor" href="#images" aria-hidden="true">
+		<span aria-hidden="true" class="octicon octicon-link"></span></a>
+		Images
+		</h2>
+
+
+	   <img style="align=center;" src="assets/map7.png" />
+	   <img style="align=center;" src="assets/map3.png" />
+	   <img style="align=center;" src="assets/map17.png" />
+
 	 <footer>
 		<div><small> Darwin pixel art made by <a href="http://diegosanches.com/science-kombat"> Diego Sanches</a> </small></div>
 		<div><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></div>
