--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
 <p>
 A travers les mutations légères et une fonction de mort pour éliminer les traits négatifs, les créatures devraient rapidement atteindre des performances excellentes sans besoin de programmer leur cerveau manuellement.</p>
 
-	
+
+		<video controls src="https://www.youtube.com/watch?v=8dOXxsIdi1s">Video de présentation</video>
+		
 		<h2>
 		<a id="notes-de-versions" class="anchor" href="#notes-de-versions" aria-hidden="true">
 		<span aria-hidden="true" class="octicon octicon-link"></span></a>
