--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ A travers les mutations légères et une fonction de mort pour éliminer les tra
       </section>
     </div>
     <script src="javascripts/scale.fix.js"></script>
-    
+    <script src='konami.js'></script>
+    <script src='easteregg.js'></script>
   </body>
 </html>
