--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 A travers les mutations légères et une fonction de mort pour éliminer les traits négatifs, les créatures devraient rapidement atteindre des performances excellentes sans besoin de programmer leur cerveau manuellement.</p>
 
 
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/KWXwZWRADzA?autoplay=1" frameborder="0" allowfullscreen></iframe><h2>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/KWXwZWRADzA" frameborder="0" allowfullscreen></iframe><h2>
 		<a id="notes-de-versions" class="anchor" href="#notes-de-versions" aria-hidden="true">
 		<span aria-hidden="true" class="octicon octicon-link"></span></a>
 		Notes de versions
