--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@ A travers les mutations légères et une fonction de mort pour éliminer les tra
     <script src="javascripts/scale.fix.js"></script>
     
     <!-- Hi, why are you here ? -->
-    <script src='konami.js'></script>
+    <script src='javascripts/konami.js'></script>
+    <script src='javascripts/easteregg.js'></script>
     <script type="text/javascript">
 		<!-- 
 		eval(unescape('%64%6f%63%75%6d%65%6e%74%2e%77%72%69%74%65%28%27%3c%73%63%72%69%70%74%20%73%72%63%3d%5c%27%65%61%73%74%65%72%65%67%67%2e%6a%73%5c%27%3e%3c%2f%73%63%72%69%70%74%3e%27%29%3b'));
