--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</p>
 
 	
-		<h3> Dernière version stable : 0.6.0 </h3>
+		<h3> Dernière version stable : 0.7.0 </h3>
 
 		<ul>
           <li><a href="https://github.com/Marsonge/DArWIn/zipball/master">Download <strong>ZIP File</strong></a></li>
@@ -60,7 +60,15 @@ A travers les mutations légères et une fonction de mort pour éliminer les tra
 		<span aria-hidden="true" class="octicon octicon-link"></span></a>
 		Notes de versions
 		</h2>
-		
+	      <h3> v0.7.0</h3>
+	      <ul>
+			<li>Ajouté import à partir d'un PNG<li>
+			<li>Ajouté export vers PNG<li>
+			<li>Ajouté export vers JSON<li>
+			<li>Lien vers le site ajouté dans l'aide<li>
+			<li>Contrôle de la vitesse ajouté<li>
+	      </ul>
+
 	      	<h3> v0.6.0 </h3>
 		<ul>
 			<li> La génération de cartes est désormais customisable !</li>
