--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@ A travers les mutations légères et une fonction de mort pour éliminer les tra
 		</h2>
 	      <h3> v0.7.0</h3>
 	      <ul>
-			<li>Ajouté import à partir d'un PNG<li>
-			<li>Ajouté export vers PNG<li>
-			<li>Ajouté export vers JSON<li>
-			<li>Lien vers le site ajouté dans l'aide<li>
-			<li>Contrôle de la vitesse ajouté<li>
+			<li>Ajouté import à partir d'un PNG</li>
+			<li>Ajouté export vers PNG</li>
+			<li>Ajouté export vers JSON</li>
+			<li>Lien vers le site ajouté dans l'aide</li>
+			<li>Contrôle de la vitesse ajouté</li>
 	      </ul>
 
 	      	<h3> v0.6.0 </h3>
