--- a/src/main/resources/help.html
+++ b/src/main/resources/help.html
@@ -28,6 +28,11 @@ The height value is defined randomly. Set a lower value if you wish for more of 
 <h3>Stats tab</h3>
 <p>It is possible to click on a creature to have access to its information in the <i>'Stats'</i> tab, as well as general information concerning the current simulation.</p>
 <p>It is recommended to pause the simulation (the <i>'Pause'</i> button is located in the <i>'Options'</i> tab) to select a creature easily.</p>
+<p>You can have access to one creature's neural network by clicking the <i>'View Neural Network'</i> button. In there, it is possible
+to visualise the matrix representation of the creature's brain.</p>
+<p>It is possible to click each node to see the  weight of each axiom, indicating how much the associated information is important for the creature.</p>
+<p>For example, if the weight of each edge connected to the red value right (red value of the color of the tile to the right of the creature) corresponding node, it means that this information is irrelevant for the creature.</p>
+<p>You can set the value of the edge one by one by right clicking them, or change the value of a whole axiom by right clicking a node.</p>
 <h3>Import/Export tab</h3>
 <p>It is possible to export the current simulation data in a JSON file, by clicking on the corresponding button in the <i>'Import/Export'</i> tab.</p>
 <p>If the current map pleases you, it is possible to export by clicking the <i>'Export map to PNG'</i> button. You can then use it in further simulations by importing it (see 'Map settings' section).</p>
